[gd_scene load_steps=8 format=3 uid="uid://23cckxol7g4t"]

[ext_resource type="Script" path="res://scripts/multiplayer_start.gd" id="1_h7vsk"]
[ext_resource type="Texture2D" uid="uid://yh0xfjl855iq" path="res://assets/Seth Unedited.jpg" id="2_w2oe7"]
[ext_resource type="PackedScene" uid="uid://fptptda68k5v" path="res://assets/testmapv1.blend" id="3_d0kad"]
[ext_resource type="PackedScene" uid="uid://cqsmjjjajbggx" path="res://scenes/levels/props/lantern.tscn" id="4_b8nfn"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_aidjv"]
sky_top_color = Color(0.631373, 0.803922, 0.984314, 1)
sky_horizon_color = Color(0.905882, 0.686275, 0.592157, 1)
ground_bottom_color = Color(0.439216, 0.384314, 0.317647, 1)
ground_horizon_color = Color(0.956863, 0.74902, 0.658824, 1)

[sub_resource type="Sky" id="Sky_ka0ik"]
sky_material = SubResource("ProceduralSkyMaterial_aidjv")

[sub_resource type="Environment" id="Environment_ugtut"]
background_mode = 2
sky = SubResource("Sky_ka0ik")
ambient_light_sky_contribution = 0.09

[node name="Multiplayer_World" type="Node3D"]
script = ExtResource("1_h7vsk")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Main Menu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 400.0
offset_top = 246.0
offset_right = -400.0
offset_bottom = -246.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Main Menu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Main Menu/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Join Button" type="Button" parent="CanvasLayer/Main Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="Host Button" type="Button" parent="CanvasLayer/Main Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host
"

[node name="Quit Button" type="Button" parent="CanvasLayer/Main Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="SethUnedited" type="Sprite2D" parent="CanvasLayer/Main Menu"]
position = Vector2(530, -69)
rotation = 0.67574
scale = Vector2(0.102724, 0.0789146)
texture = ExtResource("2_w2oe7")

[node name="Level" type="Node" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Level"]
environment = SubResource("Environment_ugtut")

[node name="Lights" type="Node3D" parent="Level"]
transform = Transform3D(-0.000296964, 0.000257792, -1, 8.08024e-05, 1, 0.000257774, 1, -8.07458e-05, -0.00029698, 0, 0, 0)

[node name="Lantern" parent="Level/Lights" instance=ExtResource("4_b8nfn")]
transform = Transform3D(-0.223789, -1.95651e-08, 2.18279e-11, 1.95669e-08, -0.223789, -9.11271e-13, 0, -9.24594e-12, 0.223789, 8.37993e-06, 0.219602, 2.67263e-05)

[node name="Lantern2" parent="Level/Lights" instance=ExtResource("4_b8nfn")]
transform = Transform3D(-0.223789, -1.95651e-08, 6.54836e-11, 1.95705e-08, -0.223789, -9.14824e-13, 0, -3.1076e-11, 0.223789, 6.70098, 0.21985, -3.06179)

[node name="Lantern3" parent="Level/Lights" instance=ExtResource("4_b8nfn")]
transform = Transform3D(-0.223789, -1.95651e-08, 9.45874e-11, 1.95705e-08, -0.223789, -9.17044e-13, 0, -4.56288e-11, 0.223789, -6.21656, 0.221077, -3.77323)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Level"]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
visible = false
shadow_enabled = true

[node name="testmapv1" parent="Level" instance=ExtResource("3_d0kad")]
transform = Transform3D(-2.95476e-05, 2.565e-05, -0.0994988, 8.03975e-06, 0.0994988, 2.56482e-05, 0.0994988, -8.03411e-06, -2.95492e-05, 0, 0, 0)

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://scenes/player/player.tscn")
spawn_path = NodePath("..")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.678484, 1.77882)

[connection signal="pressed" from="CanvasLayer/Main Menu/MarginContainer/VBoxContainer/Join Button" to="." method="_on_join_pressed"]
[connection signal="pressed" from="CanvasLayer/Main Menu/MarginContainer/VBoxContainer/Host Button" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Main Menu/MarginContainer/VBoxContainer/Quit Button" to="." method="_on_quit_button_pressed"]
